--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2163,7 +2163,7 @@ html {
  */
 body {
   margin: 0;
-  background-color:#beb1d5 
+  background-color:#beb1d5
 
 }
 
@@ -2694,6 +2694,7 @@ blockquote {
 }
 
 i {
+  font-size: .67em;
   line-height: inherit;
 }
 
@@ -4742,7 +4743,7 @@ small {
   transition: box-shadow .25s, -webkit-box-shadow .25s;
   padding: 24px;
   margin: 0.5rem 0 1rem 0;
-  border-radius: 2px;
+  border-radius: 5px;
   background-color: #fff;
 }
 
